--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,15 @@
 
 
 
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
@@ -81,6 +90,28 @@
                     <div class="count">0</div>
                 </a> -->
 
+                <!-- Button trigger modal -->
+
+
+
+
+
+                <div class="host">
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdrop">
+                        我要開團
+                    </button>
+
+                </div>
+
+                <div class="signinout">
+
+                    <a href="/sign.html"><img src="./assets/1031506_authorize_enter_login_sign in_signin_icon.png"
+                            height="30"></a>
+
+                </div>
+
+
                 <div class="member">
                     <a href="/profile.html"><img src="https://dft5bbbk1fziz.cloudfront.net/img/icons/member.png"
                             height="44"></a>
@@ -106,16 +137,27 @@
 
         <div id="left">
 
-            <input id="pac-input" class="controls search" type="text" placeholder="搜尋活動" />
-            <div id=createEvent>
-                <button>我要開團</button>
+
+            <div class="sibling-main">
+                <div class="sibling-A"><input id="pac-input" class="controls search" type="text" placeholder="搜尋活動" />
+                </div>
+                <div class="sibling-B" id="cancel-search"><img
+                        src="./assets/2191538_close_cross_delete_erase_hide_icon.png" height=25>
+                </div>
+
             </div>
+
+
+
+            <!-- <div id=createEvent>
+                <button>我要開團</button>
+            </div> -->
             <br>
-            <div id="hostGathering" style="display: none;">
+            <!-- <div id="hostGathering" style="display: none;">
                 <h3>請輸入活動資訊</h3>
 
                 <form method="post" action="/api/1.0/gatherings/hostGathering" enctype="multipart/form-data">
-                    <!-- ID <input type="text" name="product_id" /><br /> -->
+                    ID <input type="text" name="product_id" /><br />
                     Category <select name="category" id="category">
                         <option value="food">美食美酒</option>
                         <option value="sport">運動健身</option>
@@ -133,17 +175,17 @@
                     </select><br />
                     Title <input type="text" name="title" id="title" /><br />
                     Description<br /><textarea name="description" id="description"></textarea><br />
-                    start_on <input type="text" name="start_on" id="start_on" /><br />
+                    start_at <input type="text" name="start_at" id="start_at" /><br />
                     min_participant <input type=" text" name="min_participant" id="min_participant" /><br />
                     max_participant <input type="text" name="max_participant" id="max_participant" /><br />
                     place <input type="text" name="place" id="place" /><br />
                     <hr />
                     picture <input type="file" name="main_image" id="main_image" /><br />
-                    <!-- <input id="gathering_submit" type="submit" value="開團囉" /> -->
+                    <input id="gathering_submit" type="submit" value="開團囉" />
                     <button id="gathering_submit" onclick="return onClick(this.form)">開團囉</button>
                     <input id="cancel_submit" type="button" value="取消" />
                 </form>
-            </div>
+            </div> -->
 
 
             <div id="gathering-list"></div>
@@ -160,10 +202,189 @@
 
 
 
+
+
+
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h6 class="modal-title" id="staticBackdropLabel">請在地圖上點選位置並輸入資料</h6>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+
+
+
+                    <div id="mapForHost" style="height:15rem; width:22rem;"></div>
+
+                    <h6>請輸入活動資訊</h6>
+                    <form method="post" action="/api/1.0/gatherings/hostGathering" enctype="multipart/form-data">
+
+
+                        <div class="mb-3">
+                            <label for="category" class="form-label">Category</label>
+                            <select id="category" class="form-select" name="category">
+                                <option value="food">美食美酒</option>
+                                <option value="sport">運動健身</option>
+                                <option value="travel">旅行出遊</option>
+                                <option value="learning">體驗學習</option>
+                                <option value="media">影音展演</option>
+                                <option value="business">商業投資</option>
+                                <option value="party">唱歌派對</option>
+                                <option value="gmae">遊戲卡牌</option>
+                                <option value="beauty">美容時尚</option>
+                                <option value="astrology">命理諮商</option>
+                                <option value="others">其他</option>
+                            </select>
+                        </div>
+
+
+                        <div class="mb-3">
+                            <label for="title" class="form-label">Title</label>
+                            <input class="form-control" type="text" placeholder="請輸入活動名稱"
+                                aria-label="default input example" name="title" id="title">
+                            <!-- <div id="titleHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="description" class="form-label">活動敘述</label>
+                            <textarea class="form-control" name="description" id="description" rows="3"></textarea>
+                        </div>
+
+
+                        <div class="mb-3">
+                            <label for="start_at" class="form-label">活動時間</label>
+                            <input type="datetime-local" name="start_at" id="start_at">
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="min_participant" class="form-label">最少人數</label>
+                            <input class="min_participant" type="text" placeholder="請輸入數字"
+                                aria-label="default input example" name="min_participant" id="min_participant">
+                            <!-- <div id="titleHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="max_participant" class="form-label">人數上限</label>
+                            <input class="max_participant" type="text" placeholder="請輸入數字，需大於或等於最少人數"
+                                aria-label="default input example" name="max_participant" id="max_participant">
+                            <!-- <div id="titleHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="place" class="form-label">活動地點</label>
+                            <input class="place" type="text" placeholder="" aria-label="default input example"
+                                name="place" id="place">
+                            <!-- <div id="titleHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                        </div>
+
+
+                        <div class="mb-3">
+                            <label for="main_image" class="form-label">活動圖片</label>
+                            <input class="form-control" type="file" name="main_image" id="main_image">
+                        </div>
+
+
+
+
+
+                        <!-- 
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="textInput" class="form-label">Title</label>
+                            <input class="form-control" type="text" placeholder="Default input"
+                                aria-label="default input example" id="textInput">
+                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        </div>
+
+
+                        <div class="mb-3">
+                            <label for="start_at" class="form-label">Default file input example</label>
+                            <input type="datetime-local" name="start_at" id="start_on">
+                        </div>
+
+
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="disabledSelect" class="form-label">Disabled select menu</label>
+                            <select id="disabledSelect" class="form-select">
+                                <option>Disabled select 1</option>
+                                <option>Disabled select 2</option>
+                            </select>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="formFile" class="form-label">Default file input example</label>
+                            <input class="form-control" type="file" id="formFile">
+                        </div>
+
+
+                        <div class="mb-3">
+                            <label for="bdaytime" class="form-label">Default file input example</label>
+                            <input type="datetime-local" name="bdaytime" id="bdaytime">
+                        </div> -->
+
+
+
+                        <button type="submit" class="btn btn-primary" id="gathering_submit"
+                            onclick="return onClick(this.form)">確定開團</button>
+                    </form>
+
+
+
+
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+                    <!-- <button type="button" class="btn btn-primary">Understood</button> -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&v=weekly" async></script>
 
-    <script>localStorage.setItem("token", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJwcm92aWRlciI6Im5hdGl2ZSIsIm5hbWUiOiJ0ZXN0IiwiZW1haWwiOiJ0ZXN0QHRlc3QuY29tIiwicGljdHVyZSI6bnVsbCwiZXhwaXJlc0luIjoiMjU5MjAwMCIsImlhdCI6MTYzNTU4MTQ1NH0.Laoi5iUfR4NePhMBuZdzOoZkpijMALNj28yXE2aQWgw")</script>
+
+
+    <!-- <script>localStorage.setItem("token", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJwcm92aWRlciI6Im5hdGl2ZSIsIm5hbWUiOiJ0ZXN0IiwiZW1haWwiOiJ0ZXN0QHRlc3QuY29tIiwicGljdHVyZSI6bnVsbCwiZXhwaXJlc0luIjoiMjU5MjAwMCIsImlhdCI6MTYzNTU4MTQ1NH0.Laoi5iUfR4NePhMBuZdzOoZkpijMALNj28yXE2aQWgw")</script> -->
 
 
 
