--- a/public/sign.html
+++ b/public/sign.html
@@ -34,35 +34,65 @@
 
         <div id="header">
 
-            <div class="main-header">
-                <a class="logo name" href="/index.html">
-                    <!-- <img src="https://www.pngkit.com/png/full/207-2070900_the-gathering-logo-clear-gathering-word.png"
-                        height="48"> -->
-
-                    <img src="./assets/logo3.png" height="48">
+            <div id="header">
 
 
-                </a>
-                <!-- <div class="main-nav">
-                    <a href="/index.html?tag=women" class="tag">女裝</a>
-                    <div class="tag-line">|</div>
-                    <a href="/index.html?tag=men" class="tag">男裝</a>
-                    <div class="tag-line">|</div>
-                    <a href="/index.html?tag=accessories" class="tag">配件</a>
+                <div class="main-header">
+                    <a class="logo name" href="/index.html">
+                        <!-- <img src="https://www.pngkit.com/png/full/207-2070900_the-gathering-logo-clear-gathering-word.png"
+                            height="48"> -->
 
-                </div> -->
+                        <img src="./assets/logo3.png" height="48">
 
-                <!-- <input class="search" /> -->
 
-                <!-- <a class="cart">
-                    <img src="/img/icons/cart.png" height="44" />
-                    <div class="count">0</div>
-                </a> -->
+                    </a>
+                    <!-- <div class="main-nav">
+                        <a href="/index.html?tag=women" class="tag">女裝</a>
+                        <div class="tag-line">|</div>
+                        <a href="/index.html?tag=men" class="tag">男裝</a>
+                        <div class="tag-line">|</div>
+                        <a href="/index.html?tag=accessories" class="tag">配件</a>
+    
+                    </div> -->
 
-                <div class="member">
-                    <a href="/profile.html"><img src="https://dft5bbbk1fziz.cloudfront.net/img/icons/member.png"
-                            height="44"></a>
+                    <!-- <input class="search" /> -->
+
+                    <!-- <a class="cart">
+                        <img src="/img/icons/cart.png" height="44" />
+                        <div class="count">0</div>
+                    </a> -->
+
+                    <!-- Button trigger modal -->
+
+
+
+
+
+                    <div class="host">
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#staticBackdrop" id="hostbutton">
+                            我要開團
+                        </button>
+
+                    </div>
+
+                    <div class="signinout">
+
+                        <a href="/sign.html"><img src="./assets/1031506_authorize_enter_login_sign in_signin_icon.png"
+                                height="30"></a>
+
+                    </div>
+
+
+                    <div class="member">
+                        <a href="/profile.html"><img src="https://dft5bbbk1fziz.cloudfront.net/img/icons/member.png"
+                                height="44"></a>
+                    </div>
+
+
                 </div>
+
+
 
 
             </div>
