--- a/public/sign.html
+++ b/public/sign.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" type="text/css" href="styles/sign.css">
 
 
-    <script type="module">
+    <!-- <script type="module">
         import { Toast } from 'bootstrap.esm.min.js'
 
         Array.from(document.querySelectorAll('.toast'))
             .forEach(toastNode => new Toast(toastNode))
-    </script>
+    </script> -->
 
 
 
