--- a/public/gathering.html
+++ b/public/gathering.html
@@ -20,6 +20,8 @@
         // var socket = io();
     </script>
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- <link rel="stylesheet" href="sweetalert2.min.css"> -->
     <!-- <script src="src/init_map.js"></script> -->
 
     <!-- <script src="https://cdn.socket.io/4.3.2/socket.io.min.js"
@@ -50,8 +52,14 @@
 
     <link rel="stylesheet" type="text/css" href="styles/header_footer.css">
     <link rel="stylesheet" type="text/css" href="./styles/gathering.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <style type="text/css">
+        body {
+            font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif;
+        }
+
+
         #left-info {
             /* height: 100%; */
             overflow: auto;
@@ -69,6 +77,7 @@
             padding-bottom: 0.5rem;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             height: 100%;
+            max-height: 90%;
             display: flex;
 
         }
@@ -97,6 +106,7 @@
             flex-direction: column;
             height: 100%;
             width: 90%;
+            max-height: 100%;
             /* border: thin;
             border-color: turquoise; */
 
@@ -108,12 +118,7 @@
 
         }
 
-        #messages {
-            /* height: 500px; */
 
-            /* width: 300px; */
-            overflow: scroll;
-        }
 
         #messagesForm {
             background: rgba(0, 0, 0, 0.15);
@@ -156,7 +161,8 @@
             list-style-type: none;
             margin: 0;
             padding: 0;
-            height: 100%;
+            height: inherit;
+            overflow: scroll;
         }
 
         #messages>li {
@@ -166,13 +172,20 @@
         #messages>li:nth-child(odd) {
             background: #efefef;
         }
+
+
+
+        :root {
+            --animate-duration: 500ms;
+            --animate-delay: 1s;
+            --animate-repeat: 1;
+        }
     </style>
 
 </head>
 
 <body>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&v=weekly" async></script>
 
 
 
@@ -261,12 +274,20 @@
             </div>
 
             <div id=joinEvent style="width: fit-content;">
-                <button>我要加入</button>
+                <!-- <button>我要加入</button> -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off">我要加入</button>
             </div>
+
+
+
+
+
             <br>
 
             <div onclick='location.href="/index.html"' class="box4">
-                <button>回首頁</button>
+                <!-- <button>回首頁</button> -->
+                <button type="button" class="btn btn-primary btn-sm" disabled data-bs-toggle="button"
+                    autocomplete="off">回首頁</button>
             </div>
             <br>
 
@@ -326,6 +347,7 @@
 
 
         var user = {};
+        var gathering = {}
 
         // const accessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJwcm92aWRlciI6Im5hdGl2ZSIsIm5hbWUiOiJ0ZXN0IiwiZW1haWwiOiJ0ZXN0QHRlc3QuY29tIiwicGljdHVyZSI6bnVsbCwiZXhwaXJlc0luIjoiMjU5MjAwMCIsImlhdCI6MTYzNTU4MTQ1NH0.Laoi5iUfR4NePhMBuZdzOoZkpijMALNj28yXE2aQWgw"
 
@@ -374,8 +396,9 @@
                     if (response.user) {
                         console.log('response.user.name ', response.user.name)
                         user.name = response.user.name
-                        user.id = response.user.id
-                        console.log('user.id_1', user.id)
+                        user.hostId = response.data[0].host_id
+                        console.log('response.data.host_id', response.data[0].host_id)
+
                     }
 
 
@@ -391,6 +414,8 @@
 
                     const gatheringDetail = document.getElementById('gatheringDetail')
                     // gatheringDetail.style = 'text-align: left;'
+
+                    gathering.title = response.data[0].title;
 
                     gatheringDetail.appendChild(document.createTextNode(` ${response.data[0].title}`))
                     gatheringDetail.appendChild(document.createElement('br'))
@@ -479,7 +504,7 @@
 
 
 
-
+        var socket = io();
 
 
         document.getElementById("joinEvent").addEventListener('click', () => {
@@ -491,7 +516,22 @@
             ajax(`/api/1.0/gatherings/joinGathering?id=${gatheringId}`, accessToken, function (response) {
                 // console.log(response);
                 console.log('response', response)
+
+
+                let participantData = { gatheringId: gatheringId, gatheringTitle: gathering.title, hostId: user.hostId, hostName: user.name, participantName: response.data.participant.participant_name }
+
+
+                console.log('participantData', participantData)
+
                 alert('成功加入')
+                socket.emit('newparticipant', participantData)
+
+
+                // socket.emit(`host_newparticipant_${participantData.hostId}`, msg.content)
+
+
+
+
                 window.location.reload();
 
             })
@@ -510,7 +550,7 @@
 
 
 
-        var socket = io();
+        // var socket = io();
         const form = document.getElementById('messagesForm');
         const input = document.getElementById('messageInput');
 
@@ -630,6 +670,7 @@
                 }
 
                 messages.appendChild(item);
+
             }
 
 
@@ -663,9 +704,9 @@
         })
 
 
-
+        let item;
         socket.on('chat message', function (msg) {
-            const item = document.createElement('li');
+            item = document.createElement('li');
             // item.textContent = userName + ':' + msg;
 
             if (msg.speaker == user.name) {
@@ -678,6 +719,43 @@
             messages.appendChild(item);
 
             document.getElementById('messages').scrollBy(0, document.getElementById('messages').scrollHeight)
+
+
+            // Swal.fire({
+            //     position: 'top-end',
+            //     icon: 'success',
+            //     title: msg.content,
+            //     showConfirmButton: false,
+            //     timer: 500
+            // })
+
+            Swal.fire({
+                title: 'Custom animation with Animate.css',
+                position: 'bottom-end',
+                showClass: {
+
+                    popup: 'animate__animated animate__fadeIn'
+                },
+
+                timer: 1500,
+                hideClass: {
+                    popup: 'animate__animated animate__fadeOutUp'
+                },
+                backdrop: false,
+            })
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         })
 
@@ -814,6 +892,7 @@
     </script>
 
 
+    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&v=weekly" async></script>
 
 
 
