--- a/public/index.html
+++ b/public/index.html
@@ -50,80 +50,133 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
 
+
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.9/dist/sweetalert2.all.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
+
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
 
 <body>
 
+    <!-- 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script> -->
 
 
     <div class="wrap">
+
+
         <div id="header">
 
 
-            <div class="main-header">
-                <a class="logo name" href="/index.html">
-                    <!-- <img src="https://www.pngkit.com/png/full/207-2070900_the-gathering-logo-clear-gathering-word.png"
-                        height="48"> -->
-
-                    <img src="./assets/logo3.png" height="48">
-
-
-                </a>
-                <!-- <div class="main-nav">
-                    <a href="/index.html?tag=women" class="tag">女裝</a>
-                    <div class="tag-line">|</div>
-                    <a href="/index.html?tag=men" class="tag">男裝</a>
-                    <div class="tag-line">|</div>
-                    <a href="/index.html?tag=accessories" class="tag">配件</a>
-
-                </div> -->
-
-                <!-- <input class="search" /> -->
-
-                <!-- <a class="cart">
-                    <img src="/img/icons/cart.png" height="44" />
-                    <div class="count">0</div>
-                </a> -->
-
-                <!-- Button trigger modal -->
+            <nav class="navbar navbar-light fixed-top navbar-expand-lg" style="background-color: #e3f2fd;">
+                <div class="container-md">
 
 
 
 
 
-                <div class="host">
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#staticBackdrop" id="hostbutton">
-                        我要開團
-                    </button>
+                    <a class="navbar-brand logo name" href="#">
+                        <img src="./assets/logo3.png" alt="" width="230" height="60">
+                        <!-- <a class="" href="/index.html"> -->
+                    </a>
+
+                    <div id="main-header">
+                        <!-- 
+                        <button class="navbar-toggler host btn btn-primary" type="button" data-bs-toggle="modal"
+                            data-bs-target="#staticBackdrop" aria-controls="navbarNavDropdown" aria-expanded="false"
+                            aria-label="Toggle navigation" id="hostbutton">
+                            <span class="navbar-toggler-icon"></span>
+                            我要開團
+                        </button> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                            <ul class="navbar-nav">
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">
+                                        <div class="host">
+                                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                                data-bs-target="#staticBackdrop" id="hostbutton">
+                                                我要開團
+                                            </button>
+
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#"><svg xmlns=" http://www.w3.org/2000/svg" width="32"
+                                            height="32" fill="currentColor" class="bi bi-chat-left-text"
+                                            viewBox="0 0 16 16">
+                                            <path
+                                                d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+                                            <path
+                                                d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
+                                        </svg></a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+
+                                        <img src="https://dft5bbbk1fziz.cloudfront.net/img/icons/member.png">
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <li><a class="dropdown-item dropdown-sign" href="/sign.html"
+                                                style="display: block;">登入</a>
+                                        </li>
+                                        <li><a class="dropdown-item dropdown-signed" href="/profile.html"
+                                                style="display: none;">會員資料</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider dropdown-signed" style="display: none;">
+                                        </li>
+                                        <li id=signout><a class="dropdown-item dropdown-signed" href="#"
+                                                style="display: none;">登出</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+
+
+
+                    </div>
+
+
+
 
                 </div>
-
-                <div class="signinout">
-
-                    <a href="/sign.html"><img src="./assets/1031506_authorize_enter_login_sign in_signin_icon.png"
-                            height="30"></a>
-
-                </div>
-
-
-                <div class="member">
-                    <a href="/profile.html"><img src="https://dft5bbbk1fziz.cloudfront.net/img/icons/member.png"
-                            height="44"></a>
-                </div>
-
-
-            </div>
-
-
+            </nav>
 
 
         </div>
+
+
 
 
 
@@ -404,14 +457,141 @@
 
         document.getElementById("hostbutton").addEventListener('click', () => {
             if (!localStorage.getItem('token')) {
-                alert('請先登入')
-                window.location.href = '/sign.html'
+                // alert('請先登入')
+
+                Swal.fire({
+                    title: 'Error!',
+                    text: '請先登入',
+                    icon: 'error',
+                    confirmButtonText: 'OK'
+                }).then(function () {
+                    window.location.href = '/sign.html'
+                })
+
+                // Swal.fire('Any fool can use a computer')
+
+                // window.location.href = '/sign.html'
 
             }
         })
 
 
 
+
+
+        document.getElementById("navbarDropdownMenuLink").addEventListener('click', () => {
+            if (!localStorage.getItem('token')) {
+                document.getElementsByClassName('dropdown-sign')[0].style = "display: block;"
+                let sign = document.getElementsByClassName('dropdown-signed')
+                for (i = 0; i < sign.length; i++) {
+                    sign[i].style.display = "none";
+                }
+
+            } else {
+                document.getElementsByClassName('dropdown-sign')[0].style = "display: none;"
+                let signed = document.getElementsByClassName('dropdown-signed')
+                for (i = 0; i < signed.length; i++) {
+                    signed[i].style.display = "block";
+                }
+
+            }
+
+        })
+
+
+        document.getElementById("signout").addEventListener('click', () => {
+            localStorage.removeItem("token")
+
+
+            Swal.fire({
+                title: 'Success!',
+                text: '已將您登出',
+                icon: 'success',
+                confirmButtonText: 'OK'
+            })
+
+        })
+
+
+
+
+
+        document.getElementById("gathering-list").addEventListener('click', async (event) => {
+
+
+
+            let targetClassName;
+            let targetId;
+
+            if (event.target.className === 'eventPic') {
+                targetClassName = event.target.parentElement.className
+                targetId = event.target.parentElement.id
+
+                // alert('img')
+            } else {
+                targetClassName = event.target.className
+                targetId = event.target.id
+            }
+
+
+            if (targetClassName === 'gathering') {
+                // alert('click')
+
+
+
+
+                let response
+                const xhr = new XMLHttpRequest()
+                xhr.onreadystatechange = function () {
+                    if (xhr.readyState === 4 && xhr.status === 200) {
+                        response = JSON.parse(xhr.responseText)
+                        // response = xhr.responseText;
+                        console.log(response)
+                    }
+                }
+
+                const accessToken = localStorage.getItem("token")
+
+                function sendAJAX(accessToken) {
+                    xhr.open('GET', `/api/1.0/tracking/clickGatheringList?id=${targetId}`)
+                    if (accessToken) {
+                        // console.log('accessToken: ', accessToken)
+                        xhr.setRequestHeader('Authorization', `Bearer ${accessToken}`);
+                    }
+                    xhr.send()
+                }
+
+                sendAJAX(accessToken)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                // await fetch(`/tracking/clickGatheringList?id=${targetId}`)
+                //     .then((response) => {
+                //         // 這裡會得到一個 ReadableStream 的物件
+                //         console.log(response);
+                //         // 可以透過 blob(), json(), text() 轉成可用的資訊
+                //         return;
+                //     })
+                // alert('stop')
+
+            }
+
+
+
+
+        })
 
 
 
@@ -421,17 +601,17 @@
 
         const hostGathering = document.getElementById("hostGathering")
 
-        document.getElementById("createEvent").addEventListener('click', () => {
-            hostGathering.style.display = 'block'
-        })
+        // document.getElementById("createEvent").addEventListener('click', () => {
+        //     hostGathering.style.display = 'block'
+        // })
 
-        document.getElementById("cancel_submit").addEventListener('click', () => {
-            hostGathering.style.display = 'none'
-        })
+        // document.getElementById("cancel_submit").addEventListener('click', () => {
+        //     hostGathering.style.display = 'none'
+        // })
 
-        document.getElementById("gathering_submit").addEventListener('click', () => {
-            hostGathering.style.display = 'none'
-        })
+        // document.getElementById("gathering_submit").addEventListener('click', () => {
+        //     hostGathering.style.display = 'none'
+        // })
 
 
 
@@ -568,7 +748,7 @@
 
 
             let xhr = new XMLHttpRequest();
-            var url = '/api/1.0/gatherings/hostGathering';
+            let url = '/api/1.0/gatherings/hostGathering';
             xhr.open('POST', url);
             xhr.setRequestHeader('Authorization', `Bearer ${accessToken}`);
             // xhr.setRequestHeader('Content-Type', 'multipart/form-data');
@@ -652,6 +832,115 @@
 
 
     <link rel="stylesheet" type="text/css" href="./styles/home.css">
+
+
+
+
+
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.9/dist/sweetalert2.all.min.js"></script>
+
+
+
+
+
+
+
+    <script src="/socket.io/socket.io.js"></script>
+
+    <script>
+
+        let user = {}
+
+        var socket = io();
+
+
+        if (localStorage.getItem("token")) {
+
+            const accessToken = localStorage.getItem("token")
+
+            let xhr = new XMLHttpRequest();
+            let url = '/api/1.0/user/getmemberprofile';
+            xhr.open('GET', url);
+            xhr.setRequestHeader('Authorization', `Bearer ${accessToken}`);
+            // xhr.setRequestHeader('Content-Type', 'multipart/form-data');
+
+            xhr.onreadystatechange = function () {
+                if (xhr.readyState === 4 && xhr.status === 200) {
+                    console.log('apiResponse.data', xhr.responseText)
+                    console.log('JSON.parse(xhr.responseText).data.id', JSON.parse(xhr.responseText).data.id)
+
+                    user.id = JSON.parse(xhr.responseText).data.id
+
+
+
+
+
+                    console.log('host_newparticipant_${user.id}', `host_newparticipant_${user.id}`)
+
+                    socket.on(`host_newparticipant_${user.id}`, message => {
+                        console.log('message', message)
+
+
+                        Swal.fire({
+                            title: `${message.participantName} 剛加入您的 ${message.gatheringTitle} 活動`,
+                            position: 'bottom-end',
+                            showClass: {
+
+                                popup: 'animate__animated animate__fadeIn'
+                            },
+
+                            timer: 5500,
+                            hideClass: {
+                                popup: 'animate__animated animate__fadeOutUp'
+                            },
+                            backdrop: false,
+                        })
+
+                    })
+
+
+
+
+
+
+
+
+
+
+                }
+            };
+            xhr.send();
+
+
+            // var socket = io();
+
+
+
+
+
+
+
+
+
+
+
+        }
+
+
+
+
+    </script>
+
+
+
 
 
 </body>
